--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Check GH_TOKEN
+      run: echo "GH_TOKEN is set to $GH_TOKEN"
+
       - name: Publish
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
