--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,16 +15,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: "16"
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
+      - name: Debug GH_TOKEN
+        run: |
+             echo "GH_TOKEN is set"
+        echo "GH_TOKEN: ${{ secrets.GH_TOKEN }}"
 
-      - name: Check GH_TOKEN
-        run: echo "GH_TOKEN is set to $GH_TOKEN"
+      - name: Build
+        run: npm run build     
 
       - name: Publish
         env:
