--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -19,11 +19,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-             
+
       - name: Build
         run: npm run build     
 
       - name: Publish
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.EL_TOKEN }}
         run: npx electron-builder --publish always
