Добавил алиас пользователю

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "Primus-max",
+        "owner": "@Primus-max",
         "repo": "Netmax"
       }
     ]
