--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "NETMAX",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "App desc",
   "main": "main.js",
   "scripts": {
@@ -25,6 +25,7 @@
       "name": "netmax"
     },
     "win": {
+      "icon": "./assets/icon256.png",
       "target": [
         "nsis"
       ],
@@ -38,6 +39,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "electron-log": "^5.1.6",
-    "electron-updater": "^6.2.1"
+    "electron-updater": "^6.2.1",
+    "keytar": "^7.9.0"
   }
 }
