Конфигурация для релиза на разных платформах

--- a/package.json
+++ b/package.json
@@ -37,6 +37,24 @@
       "perMachine": true,
       "allowToChangeInstallationDirectory": true,
       "runAfterFinish": false
+    },
+    "mac": {
+      "icon": "./assets/images/icon256.png",
+      "target": [
+        "dmg",
+        "zip"
+      ],
+      "artifactName": "netmax-${version}.${ext}"
+    },
+    "linux": {
+      "icon": "./assets/images/icon256.png",
+      "target": [
+        "AppImage",
+        "deb",
+        "rpm"
+      ],
+      "category": "Utility",
+      "artifactName": "netmax-${version}.${ext}"
     }
   },
   "devDependencies": {
