--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "Netmax",
   "version": "1.3.6",
-  "description": "App desc",
+  "description": "App for NETMAX",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder"
   },
-  "author": "V-Max",
+  "author": {
+    "name": "V-Max",
+    "email": "pr1musmax@yandex.ru"
+  },
   "license": "ISC",
   "build": {
     "productName": "NETMAX",
@@ -63,7 +66,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "electron-log": "^5.1.6",    
+    "electron-log": "^5.1.6",
     "electron-updater": "^6.2.1",
     "keytar": "^7.9.0"
   }
