--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -44,8 +44,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Upload release artifacts
-        uses: actions/upload-artifact@v3
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
         with:
-          name: release-artifacts
-          path: dist/
+          tag_name: v${{ github.run_number }}  
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload release artifacts
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ github.run_number }}  
+          files: dist/**  
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
