--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build the app
         run: npm run build
 
+      - name: List files after build
+        run: ls -R
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
