--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
   },
   "devDependencies": {
     "electron": "^31.1.0",
-    "electron-builder": "^24.13.3",
-    "dmg-license": "^1.0.0"
+    "electron-builder": "^24.13.3"    
   },
   "dependencies": {
     "dotenv": "^16.4.5",
