--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -10,7 +10,7 @@ on:
 
 # Указываем разрешения на уровне workflow
 permissions:
-  contents: write  # разрешение на запись в содержимое репозитория
+  contents: write # разрешение на запись в содержимое репозитория
 
 jobs:
   build:
@@ -26,15 +26,19 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
 
       - name: Install dependencies
         run: npm install --no-cache
         timeout-minutes: 20
 
-      - name: Build the app
+      - name: Build the app (Linux and macOS)
+        if: matrix.os != 'windows-latest'
+        run: npm run build -- -l
+
+      - name: Build the app (Windows)
+        if: matrix.os == 'windows-latest'
         run: npm run build -- -w
-        timeout-minutes: 20
 
       - name: List files after build
         run: ls -R
@@ -56,7 +60,7 @@ jobs:
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ github.run_number }}  
+          tag_name: v${{ github.run_number }}
           draft: false
           prerelease: false
         env:
@@ -65,7 +69,7 @@ jobs:
       - name: Upload release artifacts
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ github.run_number }}  
-          files: dist/**  
+          tag_name: v${{ github.run_number }}
+          files: dist/**
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
