--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -3,10 +3,11 @@ name: Build and Publish
 on:
   push:
     branches:
-      - main
+      - dev
   pull_request:
     branches:
       - main
+  
 
 # Указываем разрешения на уровне workflow
 permissions:
