--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 permissions:
-  contents: write # разрешение на запись в содержимое репозитория
+  contents: write
 
 jobs:
   build:
@@ -63,7 +63,7 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }} # встроенная переменная GITHUB_TOKEN
 
       - name: Upload release artifacts
         uses: softprops/action-gh-release@v1
@@ -71,4 +71,4 @@ jobs:
           tag_name: v${{ github.run_number }}
           files: dist/**
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }} # встроенная переменная GITHUB_TOKEN
