--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -40,7 +40,9 @@ jobs:
         run: npm run build -- -w
 
       - name: List files after build
-        run: ls -R
+        run: |
+          echo "Files in dist directory:"
+          ls -R dist/
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
@@ -63,7 +65,7 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # или используйте GITHUB_TOKEN без секрета
 
       - name: Upload release artifacts
         uses: softprops/action-gh-release@v1
@@ -73,4 +75,4 @@ jobs:
             dist/*.exe
             dist/*.AppImage
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # или используйте GITHUB_TOKEN без секрета
