--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -65,7 +65,7 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # или используйте GITHUB_TOKEN без секрета
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # или используйте GITHUB_TOKEN без секрета
 
       - name: Upload release artifacts
         uses: softprops/action-gh-release@v1
@@ -75,4 +75,4 @@ jobs:
             dist/*.exe
             dist/*.AppImage
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # или используйте GITHUB_TOKEN без секрета
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # или используйте GITHUB_TOKEN без секрета
