--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -35,9 +35,9 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: npm run build -- -l
 
-      - name: Build the app (Windows)
-        if: matrix.os == 'windows-latest'
-        run: npm run build -- -w
+      # - name: Build the app (Windows)
+      #   if: matrix.os == 'windows-latest'
+      #   run: npm run build -- -w
 
       - name: List files after build
         run: |
