--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -50,29 +50,29 @@ jobs:
           name: netmax-build-${{ matrix.os }}
           path: dist/
 
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # release:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: v${{ github.run_number }}
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_TOKEN }} # или используйте GITHUB_TOKEN без секрета
+  #     - name: Create Release
+  #       id: create_release
+  #       uses: softprops/action-gh-release@v1
+  #       with:
+  #         tag_name: v${{ github.run_number }}
+  #         draft: false
+  #         prerelease: false
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} 
 
-      - name: Upload release artifacts
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: v${{ github.run_number }}
-          files: |
-            dist/*.exe
-            dist/*.AppImage
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # или используйте GITHUB_TOKEN без секрета
+  #     - name: Upload release artifacts
+  #       uses: softprops/action-gh-release@v1
+  #       with:
+  #         tag_name: v${{ github.run_number }}
+  #         files: |
+  #           dist/*.exe
+  #           dist/*.AppImage
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} 
