--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -33,13 +33,8 @@ jobs:
 
       - name: Build the app (Linux)
         if: matrix.os == 'ubuntu-latest'
-        run: npm run build -- -l --publish=never
-      
-
-      # - name: Build the app (Windows)
-      #   if: matrix.os == 'windows-latest'
-      #   run: npm run build -- -w
-
+        run: npm run build -- -l --publish=never 
+             
       - name: List files after build
         run: |
           echo "Files in dist directory:"
@@ -51,29 +46,19 @@ jobs:
           name: netmax-build-${{ matrix.os }}
           path: dist/
 
-  # release:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: netmax-build-${{ matrix.os }}
+          path: ./dist
 
-  #     - name: Create Release
-  #       id: create_release
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         tag_name: v${{ github.run_number }}
-  #         draft: false
-  #         prerelease: false
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} 
-
-  #     - name: Upload release artifacts
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         tag_name: v${{ github.run_number }}
-  #         files: |
-  #           dist/*.exe
-  #           dist/*.AppImage
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} 
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
