--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Checkout code again
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Это необходимо для создания тега
+          fetch-depth: 0  
 
       - name: Create a tag
         run: |
@@ -65,6 +65,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: dist/*
-          tag_name: v${{ github.run_number }}  # Укажите тег для релиза
+          tag_name: v${{ github.run_number }}  
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
