--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]  # Определяем ОС для сборки
+        os: [ubuntu-latest, windows-latest]  # Поддержка обеих платформ
 
     steps:
       - name: Checkout code
@@ -29,39 +29,42 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        timeout-minutes: 60
+        timeout-minutes: 60  # Установлено время ожидания на 60 минут
 
-      - name: Build the app
-        run: |
-          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
-            npm run build -- -l --publish=never
-          else
-            npm run build -- -w --publish=never  # Команда для Windows
-          fi 
+      - name: Build the app (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: npm run build -- -l --publish=never  # Сборка для Linux
 
-      - name: List files after build
+      - name: Build the app (Windows)
+        if: matrix.os == 'windows-latest'
+        run: npm run build -- -w --publish=never  # Сборка для Windows
+
+      - name: List files after build (Linux)
+        if: matrix.os == 'ubuntu-latest'
         run: |
           echo "Files in dist directory:"
-          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
-            ls -R dist/
-          else
-            dir dist/  # Используем dir для Windows
-          fi 
+          ls -R dist/
+
+      - name: List files after build (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          echo "Files in dist directory:"
+          dir dist/
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: netmax-build
+          name: netmax-build-${{ matrix.os }}  # Уникальное имя для артефактов
           path: dist/
 
   release:
-    runs-on: ubuntu-latest  # Выполняем релиз на Linux
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Checkout code again
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  
+          fetch-depth: 0  # Полная история для создания тега
 
       - name: Create a tag
         run: |
@@ -71,13 +74,13 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@v3
         with:
-          name: netmax-build
+          name: netmax-build-${{ needs.build.outputs.os }}  # Загружаем артефакты с уникальным именем
           path: ./dist
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           files: dist/*
-          tag_name: v${{ github.run_number }}  
+          tag_name: v${{ github.run_number }}  # Используем номер сборки для имени тега
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
