--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,12 +1,12 @@
 name: Build and Publish
 
 on:
-  push:
-    branches:
-      - dev
-  # pull_request:
+  # push:
   #   branches:
-  #     - main
+  #     - dev
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: write
