--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,9 +1,9 @@
 name: Build and Publish
 
 on:
-  # push:
-  #   branches:
-  #     - dev
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
